# power-pole

./: .Rhistory  .gitignore  README.md  get_some_other_data.R  justfile  power-pole.Rproj  pyproject.toml  skforecast_eg.toml
.Rproj.user/D4584537/pcs/: files-pane.pper
.Rproj.user/D4584537/sources/per/t/: 79494C31  79494C31-contents  9424D997
api/: healthcheck.py  model_history.py  train.py
docs/: mvp.md
r-project/.Rproj.user/D4584537/sources/per/t/: 9424D997-contents  BE62E29D
r-project/.Rproj.user/D4584537/sources/prop/: INDEX
src/: endpoints.py  skforecast_eg.py
tests/: test_skforecast_eg.py
